<resources>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="xrefreshview_header_hint_normal">下拉刷新</string>
    <string name="xrefreshview_header_hint_ready">释放立即刷新</string>
    <string name="xrefreshview_header_hint_refreshing">正在刷新...</string>
    <string name="xrefreshview_header_hint_loading">正在加载...</string>
    <string name="xrefreshview_header_hint_loaded">刷新完成</string>
    <string name="xrefreshview_header_last_time">上次更新时间：</string>
    <string name="xrefreshview_footer_hint_normal">加载完成</string>
    <string name="xrefreshview_footer_hint_complete">已无更多数据</string>
    <string name="xrefreshview_footer_hint_click">点击加载更多</string>
    <string name="xrefreshview_footer_hint_ready">松开载入更多</string>
    <string name="xrefreshview_never_refresh">从未刷新</string>
    <string name="xrefreshview_refresh_justnow">刚刚刷新</string>
    <string name="xrefreshview_refresh_minutes_ago">%1s分钟之前刷新</string>
    <string name="xrefreshview_refresh_hours_ago">%1s小时之前刷新</string>
    <string name="xrefreshview_refresh_days_ago">%1s天之前刷新</string>
    <string name="empty_msg">内容不能为空</string>
    <string name="more_flag"> ▼</string>
    <string name="monetary_unit">¥</string>
    <string name="more_store"> ●●●</string>
    <string name="sort_all">综合排序</string>
    <string name="sort_price_down">价格从高到低</string>
    <string name="sort_evaluate_count">评论由多到少排序</string>
    <string name="sort_price_up">价格从低到高</string>
    <string name="sort_evaluate">评论排序</string>
    <string name="goods_details_spec_select_all">共%1$d%2$s,¥%3$.2f</string>
    <string name="goods_storage_null">库存不足</string>
    <string name="goods_selected_num">请继续选择数量</string>
    <string name="title_activity_order_list">OrderListActivity</string>
    <string name="good_num">×</string>
    <string name="title_activity_order_details">OrderDetailsActivity</string>
    <string name="title_activity_order_ship_details">OrderShipDetailsActivity</string>
    <string name="title_activity_order_delivery_info">OrderDeliveryInfoActivity</string>
    <string name="title_activity_search_good_select">SearchGoodSelectActivity</string>
    <string name="title_activity_alipay_web">AlipayWebActivity</string>
    <string name="mine_deposit_balance">预存款余额</string>
    <string name="commission_balance">佣金余额</string>
    <string name="ceShi_price">¥%1$2.2f</string>
    <string name="mine_deposit_add">+%1$2.2d</string>
    <string name="mine_deposit_sub">-%1$2.2d</string>
    <string name="mine_deposit_yuan">%1$2.2d</string>
    <string name="mine_deposit_remain_str">账户余额</string>
    <string name="mine_deposit_recharge_str">充值明细</string>
    <string name="mine_deposit_whit_draw_str">余额提现</string>
    <string name="commission_account_settings">账户设置</string>
    <string name="mine_discount_price">¥%1$2.2f</string>
    <string name="mine_discount_limit_price">满%1$2.2f使用</string>
    <string name="mine_discount_end_time">有效期至：%1$s</string>
    <string name="all_goods">全部评价</string>
    <string name="better_goods">好评</string>
    <string name="normal_goods">中评</string>
    <string name="bad_goods">差评</string>
    <string name="image_goods">晒图</string>
    <string name="order_evaluate_tag">特别提示：评价晒图选择直接拍照或从手机相册上传图片时，请注意图片尺寸控制在1M以内，超出请压缩裁剪后再选择上传！评价内容不要超过250个字符。</string>
    <string name="order_refund_money">特别提示：退款凭证选择直接拍照或从手机相册上传图片时，请注意图片尺寸控制在1M以内，超出请压缩裁剪后再选择上传！</string>
    <string name="order_refund_good">特别提示：退货凭证选择直接拍照或从手机相册上传图片时，请注意图片尺寸控制在1M以内，超出请压缩裁剪后再选择上传！</string>
    <string name="order_complaint_good">特别提示：投诉凭证选择直接拍照或从手机相册上传图片时，请注意图片尺寸控制在1M以内，超出请压缩裁剪后再选择上传！</string>
    <string name="cart_store_all">共 %1$d 种 %2$d 件  ¥ %3$s</string>
    <string name="cart_all">合计：¥</string>
    <string name="search_store_sale_all">销量 %1$d &#160;| &#160;&#160;&#160;共 %2$d 件商品 &#160;|&#160;&#160;&#160; 共 %3$d 人收藏</string>
    <string name="promotion_title"><b>推广商品</b></string>
    <string name="promotion_apply"><b>申请</b></string>
    <string name="promotion_back"><b>返回</b></string>
    <string name="commission_withdraw"><b>提现审核</b></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="presell_info">
        \n
        1.定金下单后，请在60分钟内付款，超时将自动关闭订单。\n\n
        2.定金付款后，若非商城或商家责任（根据《售后政策》和客服判断为准），定金恕不退还；\n\n
        3.预售结束时，由系统自动更新尾款价格，先下单后下单均能享受同样的价格。请至商城“我的订单”内付尾款；\n\n
        4.尾款开始付款后，请在要求的时间（72小时）内支付尾款，若超时将自动关闭订单，且定金不予退还。请注意预售的结束时间，并及时支付尾款；\n\n
        5.预售商品不支持7天无理由退换货；\n\n
        6.发货时间请以预定商品详情页“发货时间”描述为准。
    </string>
    <string name="computer_detail">电脑版商品详情</string>
    <string name="press_again_exit">再按一次退出程序</string>
    <string name="network_request_failed">网络请求失败</string>
    <string name="click_button_reload">点击按钮重新加载</string>
    <string name="reload">重新加载</string>
    <string name="net_shopnc_b2b2c_android_mainfragmentmanager0">再按一次退出程序</string>
    <string name="net_shopnc_b2b2c_android_mainfragmentmanager1">有新版本</string>
    <string name="net_shopnc_b2b2c_android_mainfragmentmanager2">请升级最新版本</string>
    <string name="net_shopnc_b2b2c_android_mainfragmentmanager3">发现新版本：</string>
    <string name="net_shopnc_b2b2c_android_mainfragmentmanager4">请后台配置app 下载地址</string>
    <string name="net_shopnc_b2b2c_android_mainfragmentmanager5">已经是最新版本</string>
    <string name="net_shopnc_b2b2c_android_mainfragmentmanager6">更新提示</string>
    <string name="net_shopnc_b2b2c_android_mainfragmentmanager7">立即更新</string>
    <string name="net_shopnc_b2b2c_android_mainfragmentmanager8">以后更新</string>
    <string name="net_shopnc_b2b2c_android_mainfragmentmanager9">手机读取权限已允许</string>
    <string name="net_shopnc_b2b2c_android_mainfragmentmanager10">手机读取权限被禁止</string>
    <string name="net_shopnc_b2b2c_android_mainfragmentmanager11">手机定位权限已允许</string>
    <string name="net_shopnc_b2b2c_android_mainfragmentmanager12">手机定位权限被禁止</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper0">不使用优惠</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper1">不使用优惠</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper2">选择店铺优惠券</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper3">不使用优惠</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper4">面额</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper5">满</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper6">可用</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper7">不使用优惠</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper8">不使用优惠</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper9">使用店铺优惠券省</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper10">选择满优惠活动</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper11">不使用优惠</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper12">满</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper13">可用</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper14">不使用优惠</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper15">不使用优惠</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper16">参加满优惠活动</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper17">,满</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper18">减</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper19">,有效时间</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper20">至</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper21">优惠套装x</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper22">无规格</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper23">单价：</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper24">只需付邮费即可购买1件试用商品</string>
    <string name="net_shopnc_b2b2c_android_adapter_buychaindatahelper25">下单并提交试用报告可获得优惠券</string>
    <string name="net_shopnc_b2b2c_android_adapter_buydatahelper0">不使用优惠</string>
    <string name="layout_activity_address_add0">收货人姓名：</string>
    <string name="layout_activity_address_add1">请输入收货人姓名</string>
    <string name="layout_activity_address_add2">  联系手机：</string>
    <string name="layout_activity_address_add3">请输入联系人手机号码</string>
    <string name="layout_activity_address_add4">  地区选择：</string>
    <string name="layout_activity_address_add5">请选择地区</string>
    <string name="layout_activity_address_add6">  详细地址：</string>
    <string name="layout_activity_address_add7">请输入详细地址</string>
    <string name="layout_activity_address_add8">  默认地址：</string>
    <string name="layout_activity_address_add9">保存地址</string>
    <string name="layout_activity_bind_mobile0">手  机  号：</string>
    <string name="layout_activity_bind_mobile1">请输入手机号</string>
    <string name="layout_activity_bind_mobile2">获取短信验证</string>
    <string name="layout_activity_bind_mobile3">验  证  码：</string>
    <string name="layout_activity_bind_mobile4">请输入图形验证码</string>
    <string name="layout_activity_bind_mobile5">动  态  码：</string>
    <string name="layout_activity_bind_mobile6">请输入短信动态验证码</string>
    <string name="layout_activity_bind_mobile7">下一步</string>
    <string name="layout_activity_bind_mobile8">通过手机验证后，可用于快速找回登录密码及支付密码，接收账户资产变更提醒。</string>
    <string name="layout_activity_demo_register0">用户名</string>
    <string name="layout_activity_demo_register1">密码</string>
    <string name="layout_activity_demo_register2">确认密码</string>
    <string name="layout_activity_demo_register3">邮箱</string>
    <string name="layout_activity_demo_register4">注册</string>
    <string name="layout_activity_password_modify0">密码由6-20个大小写英文字母、符号或数字组成</string>
    <string name="layout_activity_password_modify1">设置密码</string>
    <string name="layout_activity_password_modify2">输入密码</string>
    <string name="layout_activity_password_modify3">密码确认</string>
    <string name="layout_activity_password_modify4">再次输入密码</string>
    <string name="layout_activity_password_modify5">确认提交</string>
    <string name="layout_activity_recycle_bothdemo0">线性垂直</string>
    <string name="layout_activity_recycle_bothdemo1">线性水平</string>
    <string name="layout_activity_recycle_bothdemo2">从第二个开始，添加5个Item</string>
    <string name="layout_activity_recycle_bothdemo3">从第二个开始，删除5个Item</string>
    <string name="layout_activity_recycle_bothdemo4">网格布局</string>
    <string name="layout_activity_recycle_bothdemo5">流式布局</string>
    <string name="layout_activity_recycle_bothdemo6">RecyclerView ScrollListener监听</string>
    <string name="layout_activity_recycle_bothdemo7">ScrollListener状态</string>
    <string name="layout_nc_popwindow_goods_screen0">商品筛选</string>
    <string name="layout_nc_popwindow_goods_screen1">重置</string>
    <string name="layout_nc_popwindow_goods_screen2">价格区间</string>
    <string name="layout_nc_popwindow_goods_screen3">最低价</string>
    <string name="layout_nc_popwindow_goods_screen4">最高价</string>
    <string name="layout_nc_popwindow_goods_screen5">商品所在地</string>
    <string name="layout_nc_popwindow_goods_screen6">不限</string>
    <string name="layout_nc_popwindow_goods_screen7">商品类型</string>
    <string name="layout_nc_popwindow_goods_screen8">赠品</string>
    <string name="layout_nc_popwindow_goods_screen9">团购</string>
    <string name="layout_nc_popwindow_goods_screen10">限时折扣</string>
    <string name="layout_nc_popwindow_goods_screen11">店铺类型</string>
    <string name="layout_nc_popwindow_goods_screen12">平台自营</string>
    <string name="layout_nc_popwindow_goods_screen13">店铺服务</string>
    <string name="layout_nc_popwindow_goods_screen14">筛选商品</string>
</resources>