<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_password_modify"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nc_bg"
    android:orientation="vertical"
    tools:context="net.shopnc.b2b2c.android.ui.mine.PasswordModifyActivity">

    <include layout="@layout/activity_base"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/layout_activity_password_modify0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/NCFormText"
            android:text="@string/layout_activity_password_modify1"/>

        <EditText
            android:id="@+id/etPassword"
            style="@style/NCFormEdit"
            android:hint="@string/layout_activity_password_modify2"
            android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/NCFormText"
            android:text="@string/layout_activity_password_modify3"/>

        <EditText
            android:id="@+id/etPasswordConfirm"
            style="@style/NCFormEdit"
            android:hint="@string/layout_activity_password_modify4"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/user_bg_selector"
        android:text="@string/layout_activity_password_modify5"
        android:textColor="@color/nc_white"/>
</LinearLayout>
