<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nc_bg"
    android:orientation="vertical">

    <include layout="@layout/activity_base" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/nc_white"
        android:orientation="horizontal">

        <TextView
            style="@style/NCFormText"
            android:layout_width="70dp"
            android:text="@string/layout_activity_bind_mobile0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/nc_bg_border_bottom">

            <EditText
                android:id="@+id/etMobile"
                style="@style/NCFormEditNoBorder"
                android:layout_weight="1"
                android:hint="@string/layout_activity_bind_mobile1"
                android:inputType="number" />

            <Button
                android:id="@+id/btnGetSmsCaptcha"
                android:layout_width="110dp"
                android:layout_height="48dp"
                android:background="@null"
                android:onClick="btnGetSmsCaptchaClick"
                android:text="@string/layout_activity_bind_mobile2"
                android:textColor="@color/nc_blue"
                android:textSize="12dp" />
        </LinearLayout>

        <TextView style="@style/NCLine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/nc_white"
        android:orientation="horizontal">

        <TextView
            style="@style/NCFormText"
            android:layout_width="70dp"
            android:text="@string/layout_activity_bind_mobile3" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etCode"
                style="@style/NCFormEdit"
                android:hint="@string/layout_activity_bind_mobile4" />

            <ImageView
                android:id="@+id/ivCode"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp" />
        </RelativeLayout>

        <TextView style="@style/NCLine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@color/nc_white"
        android:orientation="horizontal">

        <TextView
            style="@style/NCFormText"
            android:layout_width="70dp"
            android:text="@string/layout_activity_bind_mobile5" />

        <EditText
            android:id="@+id/etSmsCaptcha"
            style="@style/NCFormEdit"
            android:hint="@string/layout_activity_bind_mobile6" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        style="@style/NCCornerButton"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:onClick="btnSubmitClick"
        android:text="@string/layout_activity_bind_mobile7" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/layout_activity_bind_mobile8"
        android:textSize="12dp" />
</LinearLayout>
